# SMusic

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  gradle.properties  settings.gradle  splayer_mac_demo.cbp
example/splayer_mac_example/: .gitignore  CMakeLists.txt  main.cpp  splayer_mac_example.cbp
example/splayer_mac_example/splayer_sdl/: libsplayer_sdl.dylib  splayer_sdl.cbp
splayer/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  splayer_core.cbp
splayer/common/: Audio.h  Common.h
splayer/include/: AudioParams.h  Clock.h  Common.h  Decoder.h  Error.h  FFPlay.h  Frame.h  FrameQueue.h  MediaPlayer.h  MyAVPacketList.h  PacketQueue.h  Pipeline.h  PipelineNode.h  PipelineOpaque.h  RefCount.h  VOut.h  VOutOverlayOpaque.h  VideoState.h
splayer/player/: AOut.cpp  AOut.h  Common.h  FFPlay.cpp  FFPlay.h  MediaPlayer.cpp  MediaPlayer.h  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  Pipeline.h  PipelineNode.cpp  PipelineNode.h  PipelineOpaque.cpp  PipelineOpaque.h  State.cpp  State.h  Thread.cpp  Thread.h  VOut.cpp  VOut.h  VOutOpaque.h  VOutOverlayOpaque.cpp  VideoState.cpp  VideoState.h
splayer/src/: AOut.cpp  FFPlay.cpp  MediaPlayer.cpp  Message.cpp  MessageQueue.cpp  Mutex.cpp  Pipeline.cpp  PipelineNode.cpp  PipelineOpaque.cpp  RefCount.cpp  State.cpp  Thread.cpp  VOut.cpp  VOutOpaque.cpp  VOutOverlay.cpp  VOutOverlayOpaque.cpp
splayer/src/main/: AndroidManifest.xml
splayer_command/: .gitignore  CMakeLists.txt  splayer_command.cbp
splayer_command/src/: MacAOut.cpp  MacMediaPlayer.cpp  MacMediaPlayer.h  MacPipeline.cpp  MacPipeline.h  MacPipelineOpaque.cpp  MacPipelineOpaque.h  MacVOut.cpp  MacVOut.h  MacVOutOpaque.cpp  MacVOutOpaque.h  MyMediaPlayer.cpp  main.cpp
splayer_core/: .gitignore  CMakeLists.txt  splayer_core.cbp  splayer_mac.cbp
splayer_core/extra/soundtouch/: FIRFilter.cpp  SoundTouch.cpp  TDStretch.cpp  sse_optimized.cpp
splayer_core/include/: Audio.h  AudioParams.cpp  AudioParams.h  Clock.h  CmdUtils.h  Cmdutils.h  Decoder.h  Define.h  Error.h  ErrorNo.h  Event.h  FFPlay.h  Frame.h  FrameQueue.h  Log.h  MediaPlayer.h  Message.h  MessageQueue.h  Msg.h  Mutex.h  MyAVPacketList.h  Options.h  PacketData.h  PacketQueue.h  Pipeline.h  PipelineNode.h  PlayerState.h  Rect.h  RefCount.h  State.h  Stream.h  Surface.h  Thread.h  VOut.h  VOutOpaque.h  VOutOverlay.h  VOutOverlayOpaque.h  VideoState.h
splayer_core/src/: AOut.cpp  Audio.cpp  AudioParams.cpp  Clock.cpp  CmdUtils.c  Cmdutils.c  Decoder.cpp  Event.cpp  FFPlay.cpp  FrameQueue.cpp  Log.cpp  MediaPlayer.cpp  Message.cpp  MessageQueue.cpp  Msg.cpp  Mutex.cpp  Options.cpp  PacketQueue.cpp  Pipeline.cpp  PipelineNode.cpp  PipelineOpaque.cpp  RefCount.cpp  State.cpp  Stream.cpp  Surface.cpp  Thread.cpp  VOut.cpp  VOutOverlay.cpp  VOutOverlayOpaque.cpp
splayer_engine/: .gitignore  CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  README.md
splayer_engine/include/: AudioDecoder.h  AudioDevice.h  AudioResample.h  Condition.h  Errors.h  FFmpegUtils.h  FrameQueue.h  IMediaPlayer.h  IStreamListener.h  ISyncMediaPlayer.h  Log.h  MediaClock.h  MediaDecoder.h  MediaPlayer.h  MediaSync.h  MessageCenter.h  MessageQueue.h  PacketQueue.h  PlayerInfoStatus.h  PlayerStatus.h  Stream.h  Thread.h  VideoDecoder.h  VideoDevice.h
splayer_engine/include/common/: AndroidLog.h  Condition.h  Errors.h  FFmpegUtils.h  Log.h  Mutex.h  Thread.h
splayer_engine/include/convertor/: AudioReSampler.h  AudioResample.h  AudioResampler.h
splayer_engine/include/decoder/: AudioDecoder.h  MediaDecoder.h  VideoDecoder.h
splayer_engine/include/device/: AudioDevice.h  (+1 more)
splayer_engine/src/: AudioDecoder.cpp  AudioDevice.cpp  AudioResample.cpp  FrameQueue.cpp  Log.cpp  MediaClock.cpp  MediaPlayer.cpp  MediaSync.cpp  MessageCenter.cpp  PacketQueue.cpp  PlayerInfoStatus.cpp  Stream.cpp  VideoDecoder.cpp
splayer_mac/: .gitignore  CMakeLists.txt  Readme.md  splayer_command.cbp
splayer_mac/include/: MacAudio.h  MacAudioDevice.h  MacEvent.h  MacMediaPlayer.h  MacMediaSync.h  MacMessage.h  MacOptions.h  MacStream.h  MacSurface.h
splayer_mac/src/: MacAOut.h  MacAudio.cpp  MacAudio.h  MacAudioDevice.cpp  MacAudioOut.cpp  MacAudioOut.h  MacEvent.cpp  MacMediaPlayer.cpp  MacMediaPlayer.h  MacMediaSync.cpp  MacMessage.cpp  MacOptions.cpp  MacOptions.h  MacPipeline.cpp  MacPipeline.h  MacSDL2VideoOut.cpp  MacSDL2VideoOut.h  MacStream.cpp  MacStream.h  MacSurface.cpp  MacSurface.h  MacVOut.cpp  MacVOut.h  main.cpp
splayer_mac_demo/: .gitignore  CMakeLists.txt  main.cpp  splayer_mac_demo
splayer_mac_demo/crash/: 2019年09月26日20-48-27.txt  2019年09月26日20:33:49.txt
splayer_mac_demo/splayer_sdl/: splayer_sdl.cbp
splayer_renderer/: CMakeLists.txt  CoordinateUtils.cpp  CoordinateUtils.h  EglContext.cpp  EglContext.h  EglHelper.h  FrameBuffer.cpp  FrameBuffer.h  GLFilter.cpp  GLFilter.h  GLInputFilter.cpp  GLInputFilter.h  InputRenderNode.cpp  InputRenderNode.h  Macros.h  NodeType.h  OpenGLUtils.cpp  OpenGLUtils.h  RenderNode.cpp  RenderNode.h
splayer_renderer/egl/: EglContext.cpp  EglContext.h  EglHelper.cpp  EglHelper.h
splayer_renderer/gles/: GLFilter.cpp  GLFilter.h  OpenGLUtils.cpp  OpenGLUtils.h
splayer_renderer/include/: EglContext.h  EglHelper.h  FrameBuffer.h  GLFilter.h  GLInputFilter.h  GLInputYUV420PFilter.h  InputRenderNode.h  Match.h  OpenGLUtils.h  RenderNode.h
splayer_renderer/src/: EglContext.cpp  EglHelper.cpp  FrameBuffer.cpp  GLInputABGRFilter.cpp  Match.cpp  OpenGLUtils.cpp  RenderNode.cpp
splayer_renderer/utils/: CoordinateUtils.cpp  CoordinateUtils.h  Log.h  Match.cpp
splayer_sdl/: .gitignore  CMakeLists.txt
splayer_sdl/include/: SDLAudioDevice.h  SDLMediaPlayer.h  SDLMediaSync.h  SDLVideoDevice.h
splayer_sdl/src/: SDLAudioDevice.cpp  SDLMediaPlayer.cpp  SDLMediaSync.cpp  SDLVideoDevice.cpp
splayer_soundtouch/: .gitignore  CMakeLists.txt  SoundTouchWrapper.cpp  SoundTouchWrapper.h
splayer_soundtouch/include/: SoundTouchWrapper.h
splayer_soundtouch/src/: FIRFilter.cpp  PeakFinder.cpp  SoundTouch.cpp  TDStretch.cpp  sse_optimized.cpp
(+525 files in other folders)
